--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ package-mode = false
 python = "^3.10"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
+xgboost = "^2.1.4"
+torch = "^2.6.0"
+transformers = "^4.49.0"
 
 
 
